--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
     "@metamask/providers": "^8.1.1",
+    "@openzeppelin/contracts": "^4.6.0",
     "@tailwindcss/forms": "^0.5.1",
     "ethers": "^5.6.5",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
