--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "truffle-assertions": "^0.9.2"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
